src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_73.deca
// Description:
//    regle 3.72, pas une méthode
//
// Resultats:
//    Ligne 9 : 'x' is not a method identifier.
class A {
    int x;
}
{
    A a = new A();
    a.x();
}